2003-11-10  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WriteFtree.py: catch file open exception
	* src/WriteXML.py: try to handle invalid IDs
	* src/RelLib.py: minor organizational cleanup

2003-11-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/edit_person.glade: Set meaningful id for the Notes tab label.
	* src/EditPerson.py (__init__): Find notes_label from XML, call
	chane_notes() if note is not empty; (change_notes): Add function. 

2003-11-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (back_pressed, fwd_pressed): Pass event to the
	build_menu functions; (build_backhistmenu, build_fwdhistmenu): Use 
	event for popping the menu.

	* NEWS, TODO: catch up with the current CVS state. 

	* src/Utils.py (history_broken, clearHistory_broken, wasHistory_broken):
	Add functions. 
	* src/plugins/ReorderIds.py(__init__): Call Utils.history_broken upon
	reordering. 
	* src/gramps_main.py (clear_history): Add function; 
	(redraw_histmenu, fwd_clicked, back_clicked): Clear history if catching
	an exception (should be actually handled by reorder plugin, leaving here
       just in case); 
       (bookmark_callback): Display warning if catching an exception. Should
       never be reached if reorder properly handles broken history. 

2003-11-05  Tim Waugh  <twaugh@redhat.com>

	* src/PlaceView.py (PlaceView.goto): Scroll to found item.
	* src/SourceView.py (SourceView.goto): Likewise.
	* src/MediaView.py (MediaView.goto): Likewise.

	* src/Find.py (FindBase.show): Have the GtkEntry widget grab focus
	when find dialog is displayed.

	* src/gramps_main.py, src/FamilyView.py: Fix children enumeration
	in family view.

	* src/plugins/FilterEditor.py (ShowResults.__init__): Sort
	results.

2003-11-03  Tim Waugh  <twaugh@redhat.com>

	* src/plugins/WriteGedcom.py (GedcomWriter.write_families): Use
	frefn not prefn.

	* src/plugins/gedcomexport.glade, src/plugins/WriteGedcom.py: Added
	support for external image references.
