@@ -1,3 +1,11 @@
+2003-11-10  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/edit_person.glade: Set meaningful ids for all tab labels.
+	* src/EditPerson.py (__init__): Find labels from XML, call
+	bold_label() if contents is not empty; 
+	(bold_label, unbold label): Add functions;
+	(redraw_*): Call bold_label or unbold_label based on contents.
+
+
 2003-11-10  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/plugins/WriteFtree.py: catch file open exception
 	* src/WriteXML.py: try to handle invalid IDs
